# marianalyzer

./: .dockerignore  .env.example  .gitignore  COMMANDS.md  DEPLOY_GCP.md  Dockerfile  Dockerfile.ollama  FEATURES.md  GCP_CHANGES.md  PLAN.md  PLAN_MVP1.md  PLAN_split_services.md  README.md  SETUP.md  cloudbuild-ollama.yaml  cloudbuild.yaml  pyproject.toml
.marianalyzer/chroma/: chroma.sqlite3
deploy/: deploy-analyzer.sh  deploy-ollama.sh  setup-gcp.sh
marianalyzer/: __init__.py  __main__.py  cli.py  config.py  database.py  models.py
marianalyzer/aggregation/: clusterer.py  family_builder.py
marianalyzer/chunking/: table_chunker.py  text_chunker.py
marianalyzer/extraction/: normalizer.py  pattern_extractor.py  requirement_extractor.py
marianalyzer/indexing/: bm25_index.py  vector_index.py
marianalyzer/ingest/: document_processor.py  scanner.py
marianalyzer/llm/: embedder.py  ollama_client.py  prompts.py
marianalyzer/parsers/: base.py  docx_parser.py  pdf_parser.py  xlsx_parser.py
marianalyzer/qa/: answer_engine.py  pattern_qa.py  retriever.py
marianalyzer/utils/: citations.py  logging_config.py  path_utils.py
src/analyzer/: __init__.py  cli.py  config.py
src/analyzer/mcp/: __init__.py  server.py  server_http.py
src/analyzer/models/: __init__.py  base.py
src/analyzer/parsers/: __init__.py  base.py  docx_parser.py  pdf_parser.py  xlsx_parser.py
src/analyzer/pipelines/: __init__.py  aggregate.py  extract.py  index.py  ingest.py
src/analyzer/store/: __init__.py  chroma_store.py  gcs_store.py  sqlite_store.py
src/analyzer/utils/: __init__.py  gcp.py  llm.py  text.py
src/analyzer/validation/: __init__.py  scorer.py  validator.py
tests/: conftest.py  test_basic.py  test_parsers.py
