[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "analyzer"
version = "0.1.0"
description = "Company-specific document analyzer with MCP integration"
authors = [{name = "Maxence Beaumont", email = "beaumont.maxence@example.com"}]
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}

dependencies = [
    "typer[all]>=0.12.0",
    "rich>=13.7.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",

    # Document parsing
    "python-docx>=1.1.0",
    "openpyxl>=3.1.2",
    "pypdf>=4.0.0",

    # Database and storage
    "chromadb>=0.4.0",

    # LLM integration
    "ollama>=0.1.0",

    # MCP server
    "mcp>=0.9.0",
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",

    # Utilities
    "python-dotenv>=1.0.0",
    "httpx>=0.27.0",
    "tqdm>=4.66.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "black>=24.0.0",
    "ruff>=0.3.0",
    "mypy>=1.8.0",
]
gcp = [
    "google-cloud-storage>=2.14.0",
    "google-cloud-sql-connector>=1.7.0",
    "google-auth>=2.27.0",
    "pg8000>=1.30.0",  # PostgreSQL driver for Cloud SQL
]

[project.scripts]
analyzer = "analyzer.cli:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.ruff]
line-length = 100
target-version = "py310"
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
